--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "webpack": "webpack --watch",
     "build": "webpack",
+    "start:dev": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
+  
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,8 @@
   "devDependencies": {
     "file-loader": "^6.2.0",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
