--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "webpack",
     "start:dev": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
-  
   },
   "repository": {
     "type": "git",
@@ -24,7 +23,8 @@
     "file-loader": "^6.2.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2"
+    "webpack-dev-server": "^4.9.2",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
